# trade_journal

./: .gitignore  Trade Journal Main.md  analysis.ipynb  analysis_new.ipynb  analysis_test.ipynb  config.yaml  df2.xlsx  docs.md  journal.ipynb  journal.xlsx  main.py  pyproject.toml  setup.py  system_overview.md  t02  test_trade.py  trade.py
.obsidian/: workspace.json
Excalidraw/: Drawing.excalidraw.md
assets/1/: t.md  t1.md
export/: relevant_columns.json  trade_data.csv  trade_data.feather  trade_data.json  trade_data.parquet  trade_data.xlsx
markdown/: Trade Journal Main.md  system_overview.md
output/: index.md  studies.md  trade_1.md  trade_10.md  trade_1001.md  trade_1002.md  trade_1003.md  trade_1004.md  trade_1005.md  trade_1006.md  trade_1007.md  trade_1008.md  trade_1009.md  trade_1010.md  trade_1011.md  trade_1012.md  trade_1013.md  trade_1014.md  trade_11.md  trade_12.md  trade_13.md  trade_14.md  trade_2.md  trade_3.md  trade_4.md  trade_5.md  trade_6.md  trade_7.md  trade_8.md  trade_9.md
output/.obsidian/: workspace.json
output_markdowns/: 0.md  execution_0.md  execution_1.md  execution_4.md  execution_6.md  index.md
prev/src/: analysis.Rmd  analysis.py  simulation.py  src.Rproj  trade.py  utils.py
src/: analysis.Rmd  analysis.ipynb  analysis.py  features.py  generate_test_data.py  journal.py  position_wrapper.py  simulation.py  strategy.py  trade.py  tradecli.py  utils.py
src/cli/: cli.py  setup.py
tests/: test_analysis.py  test_trade.py
trade_journal.egg-info/: PKG-INFO  SOURCES.txt
trades/: trade_0.yaml  trade_2.yaml
(+15 files in other folders)
