[project]
name = "trade-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "expression>=5.6.0",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "pyqt5>=5.15.11",
    "qtconsole>=5.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "pytest>=8.2.0",
    "altair>=5.3.0",  # Already present
    "networkx>=3.3",  # Already present
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["trade_journal"]

[project.optional-dependencies]
test = ["pytest>=8.2.0"]
